# inkbox-quickstart-python

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  inkbox-media-stream.service  inkbox-webhook.service  pyproject.toml
scripts/: run_docker.py
src/: env_config.py  inkbox_tunnel_bootstrap.py  inkbox_tunnels_api.py  media_stream.py  realtime_phone_agent.py  server.py
src/data_models/: __init__.py  phone_media.py  webhooks.py
src/handlers/: dispatch.py
src/inkbox_webhook/: config.py  media_stream.py  processor.py  server.py
src/inkbox_webhook/handlers/: __init__.py  dispatch.py  email.py  phone.py
