# pyproject.toml

[project]
name = "sample-client-server"
version = "0.1.0"
description = "Sample Inkbox webhook receiver + phone media stream server"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.13.4", # async HTTP client/server
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "inkbox==0.2.10",
  "pydantic>=2.11.4",
  "python-dotenv>=1.1.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.3",
  "websocket-client>=1.6.0",
  "websockets>=15.0.1",
]

[project.scripts]
inkbox-webhook = "server:main"
inkbox-phone-media = "media_stream:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = { "src" = "" }
